# emu_CHIP-8

./: CMakeLists.txt  readme.md
include/: definitions.hpp  emulator.hpp  io.hpp  window.hpp
programes/: HEX_TO_DECIMAL_CONVERTER.chip
src/: emulator.cpp  io.cpp  main.cpp  window.cpp
